--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @use "../utils/mixins" as *;
 @use "../utils/footer" as *;
 @use "./animations.scss" as *;
+@use "./plane.scss" as *;
 
 :root {
   --nobgimage: ../../images/towernobg.png;
