--- a/static/css/main.css
+++ b/static/css/main.css
@@ -94,6 +94,27 @@ footer.gradientfooter {
   border-radius: 30px;
 }
 
+.masked {
+  width: 400px;
+  height: 400px;
+  mask-image: url("mask.png");
+  -webkit-mask-image: url("mask.png");
+  mask-size: cover;
+  -webkit-mask-size: cover;
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
+  mask-position: center;
+  -webkit-mask-position: center;
+  overflow: hidden;
+}
+
+.masked img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 :root {
   --nobgimage: ../../images/towernobg.png;
   --bgimage: ../../images/ut-tower.png;
