--- a/static/css/plane.css
+++ b/static/css/plane.css
@@ -1,20 +1,32 @@
 .masked {
+  position: relative;
   width: 400px;
   height: 400px;
-  mask-image: url("mask.png");
-  -webkit-mask-image: url("mask.png");
-  mask-size: cover;
-  -webkit-mask-size: cover;
-  mask-repeat: no-repeat;
-  -webkit-mask-repeat: no-repeat;
-  mask-position: center;
-  -webkit-mask-position: center;
   overflow: hidden;
+  /* Apply the mask */
+  -webkit-mask-image: url("images/defaultflying.png");
+  mask-image: url("images/defaultflying.png");
+  border: 3px solid red;
+  background: url("images/defaultflying.png") center/cover no-repeat;
 }
 
-.masked img {
+/* everything inside should respect the mask */
+.masked * {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  display: block;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(45deg, red, blue);
+  mix-blend-mode: multiply; /* or overlay, screen, color, etc. */
+  opacity: 0.8; /* control how strong the paint effect looks */
+  width: 400px;
+  height: 400px;
+  top: 0;
+  left: 0;
 }/*# sourceMappingURL=plane.css.map */
