--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -277,18 +277,37 @@ body {
     animation: rotatehue 5s linear infinite;
   }
   @keyframes contrastshift {
+    // so I'm actually rotating the hue AND contrast
     0% {
       filter: brightness(113%) contrast(1.3) saturate(94%) hue-rotate(0deg);
     }
     50% {
-      filter: brightness(113%) contrast(101) saturate(94%) hue-rotate(0deg);
+      filter: brightness(113%) contrast(101) saturate(94%) hue-rotate(360deg);
     }
     100% {
-      filter: brightness(113%) contrast(1.3) saturate(94%) hue-rotate(360deg);
+      filter: brightness(113%) contrast(1.3) saturate(94%) hue-rotate(0deg);
     }
   }
+
   .contrastclass {
-    animation: rotatehue 10s linear ease;
+    animation: contrastshift 10s ease forwards;
+  }
+  @keyframes greyscaleshift {
+    0% {
+      filter: brightness(113%) contrast(1.3) saturate(94%) grayscale(0)
+        hue-rotate(116deg);
+    }
+    50% {
+      filter: brightness(113%) contrast(1.3) saturate(94%) grayscale(1)
+        hue-rotate(116deg);
+    }
+    100% {
+      filter: brightness(113%) contrast(1.3) saturate(94%) grayscale(0)
+        hue-rotate(116deg);
+    }
+  }
+  .greyscaleclass {
+    animation: greyscaleshift 10s ease forwards;
   }
 
   .gradient-circle {
