--- a/static/css/main.css
+++ b/static/css/main.css
@@ -397,14 +397,28 @@ body #heading {
     filter: brightness(113%) contrast(1.3) saturate(94%) hue-rotate(0deg);
   }
   50% {
-    filter: brightness(113%) contrast(101) saturate(94%) hue-rotate(0deg);
+    filter: brightness(113%) contrast(101) saturate(94%) hue-rotate(360deg);
   }
   100% {
-    filter: brightness(113%) contrast(1.3) saturate(94%) hue-rotate(360deg);
+    filter: brightness(113%) contrast(1.3) saturate(94%) hue-rotate(0deg);
   }
 }
 #editedimage2 .contrastclass {
-  animation: rotatehue 10s linear ease;
+  animation: contrastshift 10s ease forwards;
+}
+@keyframes greyscaleshift {
+  0% {
+    filter: brightness(113%) contrast(1.3) saturate(94%) grayscale(0) hue-rotate(116deg);
+  }
+  50% {
+    filter: brightness(113%) contrast(1.3) saturate(94%) grayscale(1) hue-rotate(116deg);
+  }
+  100% {
+    filter: brightness(113%) contrast(1.3) saturate(94%) grayscale(0) hue-rotate(116deg);
+  }
+}
+#editedimage2 .greyscaleclass {
+  animation: greyscaleshift 10s ease forwards;
 }
 #editedimage2 .gradient-circle {
   width: 200px;
