Added save plane button using html to image

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -126,10 +126,15 @@ body {
   .paint-layer {
     position: absolute;
     inset: 0;
-    background: linear-gradient(90deg, red, blue);
+    background: linear-gradient(
+      90deg,
+      rgb(226, 54, 7),
+      rgb(30, 151, 89),
+      rgb(35, 135, 243)
+    );
     background-size: 200% 100%;
     background-position: 0% center;
-    animation: paintMove 8s linear infinite;
+    animation: paintMove 10s linear infinite;
   }
 
   @keyframes paintMove {
@@ -137,7 +142,7 @@ body {
       background-position: 0% center;
     }
     to {
-      background-position: 100% center;
+      background-position: 210% center;
     }
   }
 }
@@ -320,11 +325,11 @@ body {
       #6db8ff 100%
     ); /* remove transparent stop */
     mix-blend-mode: overlay;
-    opacity: 0.5; /* make it fully visible */
+    opacity: 0.8; /* make it fully visible */
     pointer-events: none;
     transition: transform 0.05s linear;
     top: 50%;
-    left: 50%;
+    left: 48%;
   }
   .bluecircle {
     border-radius: 50%;
