--- a/static/css/main.css
+++ b/static/css/main.css
@@ -202,7 +202,7 @@ body .navbar .pages a:hover {
   text-underline-offset: 4px;
   text-decoration-thickness: 2px;
 }
-body #heading {
+body #textheading {
   margin: 50px 0px;
 }
 
@@ -468,7 +468,7 @@ body #heading {
   position: relative;
   z-index: 3;
   background: linear-gradient(90deg, #425d84, #605bf7, #60c4ff);
-  top: -778px;
+  top: -731px;
   right: -608px;
   transform: rotate(-11deg);
   -webkit-background-clip: text;
@@ -487,4 +487,31 @@ body #heading {
 .circle3,
 .plane {
   pointer-events: none; /* allows clicks to pass through */
+}
+
+.headingandplane {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin: 100px 0;
+}
+.headingandplane .heading2 {
+  z-index: 3;
+  background: linear-gradient(90deg, #425d84, #605bf7, #60c4ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold;
+  font-size: 200px;
+  /* standard gradient */
+  -webkit-background-clip: text; /* show background only inside text */
+  -webkit-text-fill-color: transparent; /* make text itself transparent */
+  font-weight: bold;
+}
+.headingandplane #plane2 {
+  margin-top: -220px;
+  width: 795px;
+  height: auto;
+  z-index: 3;
 }/*# sourceMappingURL=main.css.map */
